fixed inner box shifting

--- a/app/styles/components/_PuckBox.scss
+++ b/app/styles/components/_PuckBox.scss
@@ -3,22 +3,31 @@
 // -----------------------------------------------------------------------------
 
 .box {
-
 	text-align: center;
-	width: 50px;
+	width: 52px;
 	height: 80px;
-	padding: 8px 4px;
-	:hover {
-		width: 50px;
-		height: 80px;
-		padding: 8px 4px;
-		// border: 1px solid #D6D3CD;
-
-	}
-	.image {
-		text-align: center;
-		min-width: 50px;
-		width: 50px !important;
-		height: auto;
-	}
+	margin: 4px 4px 0px 0px;
+	// background-color: #D6D3CD;
+	border: 1px solid rgba(0, 0, 0, 0);
+}
+.box-selected {
+	text-align: center;
+	width: 52px;
+	height: 80px;
+	margin: 4px 4px 0px 0px;
+	background-color: #D6D3CD;
+	border: 1px solid #D6D3CD;
+}
+.box:hover {
+	width: 52px;
+	height: 80px;
+	border: 1px solid #D6D3CD;
+	// background-color: #D6D3CD;
+}
+.image {
+	text-align: center;
+	min-width: 42px !important;
+	width: 42px !important;
+	margin: 8px 4px 0px 4px;
+	height: auto;
 }
